trying to fix iphone layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ img.smlogo {
     font-weight: 400; }
 
   header {
-    height: 120px;
+    height: 200px;
     font-size: 1.2rem;
     margin: 0;
     line-height: 0.8rem; }
